syntax = "proto3";
package sentinel.session.v2;

import "gogoproto/gogo.proto";
import "sentinel/types/v1/status.proto";

option go_package = "github.com/sentinel-official/hub/v12/x/session/types/v2";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

// EventStart represents an event signaling the start of a subscription.
message EventStart {
  // Field 1: Address associated with the event.
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];

  // Field 2: Node address associated with the event.
  string node_address = 2 [(gogoproto.moretags) = "yaml:\"node_address\""];

  // Field 3: Identifier of the event.
  uint64 id = 3 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // Field 4: Identifier of the plan associated with the event.
  uint64 plan_id = 4 [
    (gogoproto.customname) = "PlanID",
    (gogoproto.moretags) = "yaml:\"plan_id\""
  ];

  // Field 5: Identifier of the subscription associated with the event.
  uint64 subscription_id = 5 [
    (gogoproto.customname) = "SubscriptionID",
    (gogoproto.moretags) = "yaml:\"subscription_id\""
  ];
}

// EventUpdateDetails represents an event signaling an update in subscription details.
message EventUpdateDetails {
  // Field 1: Address associated with the event.
  string address = 1 [(gogoproto.moretags) = "yaml:\"address\""];

  // Field 2: Node address associated with the event.
  string node_address = 2 [(gogoproto.moretags) = "yaml:\"node_address\""];

  // Field 3: Identifier of the event.
  uint64 id = 3 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // Field 4: Identifier of the plan associated with the event.
  uint64 plan_id = 4 [
    (gogoproto.customname) = "PlanID",
    (gogoproto.moretags) = "yaml:\"plan_id\""
  ];

  // Field 5: Identifier of the subscription associated with the event.
  uint64 subscription_id = 5 [
    (gogoproto.customname) = "SubscriptionID",
    (gogoproto.moretags) = "yaml:\"subscription_id\""
  ];
}

// EventUpdateStatus represents an event signaling an update in subscription status.
message EventUpdateStatus {
  // Field 1: Status associated with the event.
  sentinel.types.v1.Status status = 1 [(gogoproto.moretags) = "yaml:\"status\""];

  // Field 2: Address associated with the event.
  string address = 2 [(gogoproto.moretags) = "yaml:\"address\""];

  // Field 3: Node address associated with the event.
  string node_address = 3 [(gogoproto.moretags) = "yaml:\"node_address\""];

  // Field 4: Identifier of the event.
  uint64 id = 4 [
    (gogoproto.customname) = "ID",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // Field 5: Identifier of the plan associated with the event.
  uint64 plan_id = 5 [
    (gogoproto.customname) = "PlanID",
    (gogoproto.moretags) = "yaml:\"plan_id\""
  ];

  // Field 6: Identifier of the subscription associated with the event.
  uint64 subscription_id = 6 [
    (gogoproto.customname) = "SubscriptionID",
    (gogoproto.moretags) = "yaml:\"subscription_id\""
  ];
}
