syntax = "proto3";
package sentinel.session.v2;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/sentinel-official/hub/v12/x/session/types/v2";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

message Params {
  google.protobuf.Duration status_change_delay = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
  bool proof_verification_enabled = 2;
}
